--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,8 @@
+@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);  /* 무료로 사용 가능한 무료 웹 폰트*/
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: "Noto Sans KR",-apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", /* "Noto Sans KR" //폰트 사용 하기 위함*/
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
